feat: rename transactionDate to date in transaction schema and related files
